addin the swagger and redo deployment

--- a/alx_travel_app/.env
+++ b/alx_travel_app/.env
@@ -1,7 +1,26 @@
 # Django Settings
 SECRET_KEY=django-insecure-kabwu+*kxqu6e7g6^wo36%#-f)z1hi2j(clearu25zdz1fcommitsq
 DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
-CHAPA_SECRET_KEY=your_chapa_secret_key_here
+ALLOWED_HOSTS=localhost,127.0.0.1, *
+
+# Production Settings (uncomment and update for production)
+# SECRET_KEY=your-production-secret-key-here
+# DEBUG=False
+# ALLOWED_HOSTS=your-domain.com,*.render.com,*.herokuapp.com
+
+# Database (for production)
+# DATABASE_URL=postgresql://user:password@host:port/database
+
+# Celery Configuration
+CELERY_BROKER_URL=amqp://guest:guest@localhost:5672//
+CELERY_RESULT_BACKEND=rpc://
+# For production with Redis:
+# CELERY_BROKER_URL=redis://localhost:6379/0
+# CELERY_RESULT_BACKEND=redis://localhost:6379/0
+
+# Email Configuration
 EMAIL_HOST_USER=your-email@gmail.com
 EMAIL_HOST_PASSWORD=your-app-password
+
+# Payment Gateway
+CHAPA_SECRET_KEY=your_chapa_secret_key_here
