--- a/alx_travel_app/requirements.txt
+++ b/alx_travel_app/requirements.txt
@@ -21,3 +21,7 @@ celery==5.3.4
 kombu==5.3.4
 billiard==4.2.0
 amqp==5.2.0
+dj-database-url==2.1.0
+gunicorn==21.2.0
+whitenoise==6.6.0
+redis==5.0.1
